[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RecombNet"
version = "1.0.0"
description = "Python 3 recombination screening and visual ARG generation with persistent homology"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "OpenAI reimplementation"}
]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
  "networkx>=3.0",
]

[project.scripts]
recombnet = "recombnet.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["recombnet*"]
